--- a/acmeair/source/acmeair-mainservice-java/src/main/webapp/index.html
+++ b/acmeair/source/acmeair-mainservice-java/src/main/webapp/index.html
@@ -109,7 +109,7 @@
 		
 		<div class="content">
 			<img src="images/acmeAirplane.png" alt="home" /><br/>
-			<h1 style="margin: 15px 0 0 0;">Welcome to Acme Air, secured by RHACS test checkout with ref</h1>
+			<h1 style="margin: 15px 0 0 0;">Welcome to Acme Air, secured by RHACS test change from main to DevSecOps</h1>
 			<p>This is a sample application for performance testing of light weight app servers, partionable data storage, Web 2.0 and mobile on the cloud.</p>
 		</div>
 	</div>
