--- a/acmeair/source/acmeair-mainservice-java/src/main/webapp/index.html
+++ b/acmeair/source/acmeair-mainservice-java/src/main/webapp/index.html
@@ -108,10 +108,10 @@
 		</div>
 		
 		<div class="content">
-			<img src="images/acmeAirplane2.png" alt="home" /><br/>
-			<h1 style="margin: 15px 0 0 0;">Welcome to Acme Air - may 15 2024</h1>
+			<img src="images/acmeAirplane.png" alt="home" /><br/>
+			<h1 style="margin: 15px 0 0 0;">Welcome to Acme Air</h1>
 
-			<p>This is a sample application for performance testing of light weight app servers, partionable data storage, Web 2.0 and mobile on the cloud.</p>
+			<p>This is a sample application for performance testing of light weight Java app servers in containers.</p>
 		</div>
 	</div>
 	<footer>
