--- a/acmeair/source/acmeair-mainservice-java/src/main/webapp/index.html
+++ b/acmeair/source/acmeair-mainservice-java/src/main/webapp/index.html
@@ -109,7 +109,7 @@
 		
 		<div class="content">
 			<img src="images/acmeAirplane2.png" alt="home" /><br/>
-			<h1 style="margin: 15px 0 0 0;">Welcome to Acme Air devsecops demo 6/24/24 - remove push-to-registry</h1>
+			<h1 style="margin: 15px 0 0 0;">Welcome to Acme Air devsecops demo 6/24/24 - reinstall quay</h1>
 
 			<p>This is a sample application for performance testing of light weight Java app servers in containers.</p>
 		</div>
