--- a/acmeair/source/acmeair-mainservice-java/src/main/webapp/index.html
+++ b/acmeair/source/acmeair-mainservice-java/src/main/webapp/index.html
@@ -108,8 +108,8 @@
 		</div>
 		
 		<div class="content">
-			<img src="images/acmeAirplane2.png" alt="home" /><br/>
-			<h1 style="margin: 15px 0 0 0;">Welcome to Acme Air devsecops demo - 6/26/24 test</h1>
+			<img src="images/acmeAirplane.png" alt="home" /><br/>
+			<h1 style="margin: 15px 0 0 0;">Welcome to Acme Air devsecops demo</h1>
 
 			<p>This is a sample application for performance testing of light weight Java app servers in containers.</p>
 		</div>
