--- a/acmeair/source/acmeair-mainservice-java/src/main/webapp/index.html
+++ b/acmeair/source/acmeair-mainservice-java/src/main/webapp/index.html
@@ -111,7 +111,7 @@
 			<img src="images/acmeAirplane2.png" alt="home" /><br/>
 			<h1 style="margin: 15px 0 0 0;">Welcome to Acme Air! Updated with GitHub runners for multiple architectures after switching to quay.</h1>
 
-			<p>This is a sample application for performance testing of light weight Java app servers in containers. Switch to quay.</p>
+			<p>This is a sample application for performance testing of light weight Java app servers in containers. Switch to quay. v2</p>
 		</div>
 	</div>
 	<footer>
