--- a/acmeair/source/acmeair-mainservice-java/src/main/webapp/index.html
+++ b/acmeair/source/acmeair-mainservice-java/src/main/webapp/index.html
@@ -111,7 +111,7 @@
 			<img src="images/acmeAirplane.png" alt="home" /><br/>
 			<h1 style="margin: 15px 0 0 0;">Welcome to Acme Air!</h1>
 
-			<p>This is a sample mult-architecture containerized application.</p>
+			<p>This is a sample mult-architecture containerized app.</p>
 		</div>
 	</div>
 	<footer>
